--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "axios": "^1.11.0",
     "framer-motion": "^11.0.8",
     "react": "^19.1.1",
