--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
+    "express": "^5.1.0",
     "fs-extra": "^11.3.1",
     "jsonwebtoken": "^9.0.2",
+    "mssql": "^11.0.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5"
   }
