--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.11.0",
     "framer-motion": "^11.0.8",
     "react": "^19.1.1",
