--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -12,15 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
     "fs-extra": "^11.3.1",
     "jsonwebtoken": "^9.0.2",
-    "mssql": "^11.0.1",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
